Add additional Japanese phonetic mappings

--- a/kuizz.html
+++ b/kuizz.html
@@ -184,7 +184,18 @@ const kana=[
 ["ma","ま"],["mi","み"],["mu","む"],["me","め"],["mo","も"],
 ["ya","や"],["yu","ゆ"],["yo","よ"],
 ["ra","ら"],["ri","り"],["ru","る"],["re","れ"],["ro","ろ"],
-["wa","わ"],["wo","を"],["n","ん"]
+["wa","わ"],["wo","を"],["n","ん"],
+  ["kya","きゃ"],["kyu","きゅ"],["kyo","きょ"],
+["sha","しゃ"],["shu","しゅ"],["sho","しょ"],
+["cha","ちゃ"],["chu","ちゅ"],["cho","ちょ"],
+["nya","にゃ"],["nyu","にゅ"],["nyo","にょ"],
+["hya","ひゃ"],["hyu","ひゅ"],["hyo","ひょ"],
+["mya","みゃ"],["myu","みゅ"],["myo","みょ"],
+["rya","りゃ"],["ryu","りゅ"],["ryo","りょ"],
+["gya","ぎゃ"],["gyu","ぎゅ"],["gyo","ぎょ"],
+["ja","じゃ"],["ju","じゅ"],["jo","じょ"],
+["bya","びゃ"],["byu","びゅ"],["byo","びょ"],
+["pya","ぴゃ"],["pyu","ぴゅ"],["pyo","ぴょ"]
 ];
 
 let q=[],cur=0,xp=0,streak=0,level=1;
