Add Japanese numbers to kanji1.html

--- a/kanji1.html
+++ b/kanji1.html
@@ -356,8 +356,19 @@
       ["三百", "sambyaku"],
       ["六百", "roppyaku"],
       ["八百", "happyaku"],
-      ["SAMPAI SINI", "SAMPAI SINI"],
-      ["話す", "はなす"]
+      ["千", "sen"],
+      ["二千", "nisen"],
+      ["三千", "sanzen"],
+      ["八千", "hassen"],
+      ["万", "man"],
+      ["十万", "juu man"],
+      ["百万", "hyaku man"],
+      ["一千万", "issen man"],
+      ["一億", "ichi oku"],
+      ["十億", "juu oku"],
+      ["百億", "hyaku oku"],
+      ["一千億", "issen oku"],
+      ["一兆", "icchou"],
     ];
 
     let questions = [];
