--- a/kotoba.html
+++ b/kotoba.html
@@ -437,6 +437,27 @@ const vocab=[
       ["さかな", "ikan"],
       ["やさい", "sayuran"],
       ["くだもの", "buah-buahan"],
+      ["みず", "air"],
+  ["おちゃ", "teh jepang"],
+  ["こうちゃ", "teh"],
+  ["ぎゅうにゅう", "susu sapi"],
+  ["ジュース", "jus"],
+  ["ビール", "bir"],
+  ["[お] さけ", "sake"],
+  ["ビデオ", "video"],
+  ["えいが", "film"],
+  ["てがみ", "surat"],
+  ["レポート", "laporan"],
+  ["しゃしん", "foto/potret"],
+  ["みせ", "toko"],
+  ["レストラン", "restoran"],
+  ["にわ", "halaman/kebun"],
+  ["しゅくだい", "PR"],
+  ["テニス", "tenis"],
+  ["サッカー", "sepak bola"],
+  ["[お] はなみ", "(tradisi)lihat bunga"],
+  ["なに", "apa"],
+  ["いっしょに", "bersama-sama"],
 ];
 
 let q=[],cur=0,xp=0,streak=0,level=1;
