Add additional Japanese character mappings

--- a/kuis.html
+++ b/kuis.html
@@ -194,7 +194,28 @@ const kana=[
       ["ぎゃ","gya"],["ぎゅ","gyu"],["ぎょ","gyo"],
       ["じゃ","ja"],["じゅ","ju"],["じょ","jo"],
       ["びゃ","bya"],["びゅ","byu"],["びょ","byo"],
-      ["ぴゃ","pya"],["ぴゅ","pyu"],["ぴょ","pyo"]
+      ["ぴゃ","pya"],["ぴゅ","pyu"],["ぴょ","pyo"],
+  ["ア","a"],["イ","i"],["ウ","u"],["エ","e"],["オ","o"],
+  ["カ","ka"],["キ","ki"],["ク","ku"],["ケ","ke"],["コ","ko"],
+  ["サ","sa"],["シ","shi"],["ス","su"],["セ","se"],["ソ","so"],
+  ["タ","ta"],["チ","chi"],["ツ","tsu"],["テ","te"],["ト","to"],
+  ["ナ","na"],["ニ","ni"],["ヌ","nu"],["ネ","ne"],["ノ","no"],
+  ["ハ","ha"],["ヒ","hi"],["フ","fu"],["ヘ","he"],["ホ","ho"],
+  ["マ","ma"],["ミ","mi"],["ム","mu"],["メ","me"],["モ","mo"],
+  ["ヤ","ya"],["ユ","yu"],["ヨ","yo"],
+  ["ラ","ra"],["リ","ri"],["ル","ru"],["レ","re"],["ロ","ro"],
+  ["ワ","wa"],["ヲ","wo"],["ン","n"],
+  ["キャ","kya"],["キュ","kyu"],["キョ","kyo"],
+  ["シャ","sha"],["シュ","shu"],["ショ","sho"],
+  ["チャ","cha"],["チュ","chu"],["チョ","cho"],
+  ["ニャ","nya"],["ニュ","nyu"],["ニョ","nyo"],
+  ["ヒャ","hya"],["ヒュ","hyu"],["ヒョ","hyo"],
+  ["ミャ","mya"],["ミュ","myu"],["ミョ","myo"],
+  ["リャ","rya"],["リュ","ryu"],["リョ","ryo"],
+  ["ギャ","gya"],["ギュ","gyu"],["ギョ","gyo"],
+  ["ジャ","ja"],["ジュ","ju"],["ジョ","jo"],
+  ["ビャ","bya"],["ビュ","byu"],["ビョ","byo"],
+  ["ピャ","pya"],["ピュ","pyu"],["ピョ","pyo"]
 ];
 
 let q=[],cur=0,xp=0,streak=0,level=1;
