--- a/kuizz.html
+++ b/kuizz.html
@@ -195,7 +195,28 @@ const kana=[
 ["gya","ぎゃ"],["gyu","ぎゅ"],["gyo","ぎょ"],
 ["ja","じゃ"],["ju","じゅ"],["jo","じょ"],
 ["bya","びゃ"],["byu","びゅ"],["byo","びょ"],
-["pya","ぴゃ"],["pyu","ぴゅ"],["pyo","ぴょ"]
+["pya","ぴゃ"],["pyu","ぴゅ"],["pyo","ぴょ"],
+  ["a","ア"],["i","イ"],["u","ウ"],["e","エ"],["o","オ"],
+  ["ka","カ"],["ki","キ"],["ku","ク"],["ke","ケ"],["ko","コ"],
+  ["sa","サ"],["shi","シ"],["su","ス"],["se","セ"],["so","ソ"],
+  ["ta","タ"],["chi","チ"],["tsu","ツ"],["te","テ"],["to","ト"],
+  ["na","ナ"],["ni","ニ"],["nu","ヌ"],["ne","ネ"],["no","ノ"],
+  ["ha","ハ"],["hi","ヒ"],["fu","フ"],["he","ヘ"],["ho","ホ"],
+  ["ma","マ"],["mi","ミ"],["mu","ム"],["me","メ"],["mo","モ"],
+  ["ya","ヤ"],["yu","ユ"],["yo","ヨ"],
+  ["ra","ラ"],["ri","リ"],["ru","ル"],["re","レ"],["ro","ロ"],
+  ["wa","ワ"],["wo","ヲ"],["n","ン"],
+  ["kya","キャ"],["kyu","キュ"],["kyo","キョ"],
+  ["sha","シャ"],["shu","シュ"],["sho","ショ"],
+  ["cha","チャ"],["chu","チュ"],["cho","チョ"],
+  ["nya","ニャ"],["nyu","ニュ"],["nyo","ニョ"],
+  ["hya","ヒャ"],["hyu","ヒュ"],["hyo","ヒョ"],
+  ["mya","ミャ"],["myu","ミュ"],["myo","ミョ"],
+  ["rya","リャ"],["ryu","リュ"],["ryo","リョ"],
+  ["gya","ギャ"],["gyu","ギュ"],["gyo","ギョ"],
+  ["ja","ジャ"],["ju","ジュ"],["jo","ジョ"],
+  ["bya","ビャ"],["byu","ビュ"],["byo","ビョ"],
+  ["pya","ピャ"],["pyu","ピュ"],["pyo","ピョ"]
 ];
 
 let q=[],cur=0,xp=0,streak=0,level=1;
