Update links in menukosakata.html

--- a/menukosakata.html
+++ b/menukosakata.html
@@ -209,12 +209,12 @@ const quizLinks={
     "Kata Sifat Dasar":"minna/bab4.html",
   },
   minna:{
-    "Bab 1":"minna/bab1.html",
-    "Bab 2":"minna/bab2.html",
-    "Bab 3":"minna/bab3.html",
-    "Bab 4":"minna/bab4.html",
-    "Bab 5":"minna/bab5.html",
-    "Bab 6":"minna/bab6.html",
+    "Bab 1":"bab1.html",
+    "Bab 2":"bab2.html",
+    "Bab 3":"bab3.html",
+    "Bab 4":"bab4.html",
+    "Bab 5":"bab5.html",
+    "Bab 6":"bab6.html",
     "Bab 7":"minna/bab7.html",
     "Bab 8":"minna/bab8.html",
     "Bab 9":"minna/bab9.html",
@@ -238,10 +238,10 @@ const quizLinks={
     "Partikel":"n4/partikel.html"
   },
 random:{
-    "Kosakata 1":"n4/benda.html",
-    "Kosakata 2":"n4/kerja.html",
-    "Kosakata 3":"n4/sifat.html",
-    "Kosakata 4":"n4/partikel.html"
+    "Kosakata 1":"kosakata.html",
+    "Kosakata 2":"kotoba.html",
+    "Kosakata 3":"n5kosakata.html",
+    "Kosakata 4":"xpresstka.html"
 }
 };
 
