Update quiz links for pemula category

--- a/menukosakata.html
+++ b/menukosakata.html
@@ -194,19 +194,20 @@ footer{
 <script>
 const quizLinks={
   pemula:{
-    "Kata Sapaan":"minna/bab1.html",
-    "Kata Ganti":"minna/bab2.html",
-    "Nama Hari":"minna/bab3.html",
-    "Waktu":"minna/bab4.html",
-    "Nama Bulan":"minna/bab5.html",
-    "Sekolah":"minna/bab6.html",
-    "Warna":"minna/bab7.html",
-    "Angka":"minna/bab8.html",
-    "Anggota Tubuh":"minna/bab4.html",
-    "Peralatan Sekolah":"minna/bab4.html",
-    "Peralatan Dapur":"minna/bab4.html",
-    "Buah dan Sayur":"minna/bab4.html",
-    "Kata Sifat Dasar":"minna/bab4.html",
+    "Kata Sapaan":"pemulasapaan.html",
+    "Kata Ganti":"pemulaganti.html",
+    "Nama Hari":"pemulahari.html",
+    "Waktu":"pemulawaktu.html",
+    "Nama Bulan":"pemulabulan.html",
+    "Sekolah":"pemulasekolah.html",
+    "Warna":"pemulawarna.html",
+    "Angka":"pemulaangka.html",
+    "Anggota Tubuh":"pemulatubuh.html",
+    "Peralatan Sekolah":"psekolah.html",
+    "Peralatan Dapur":"pemuladapur.html",
+    "Buah dan Sayur":"pemulasayur.html",
+    "Kata Sifat Dasar":"katasifat.html",
+    "Kata Kerja Dasar":"katakerja.html",
   },
   minna:{
     "Bab 1":"bab1.html",
