Rename link for 'Sekolah' to 'psekolah.html'

--- a/menukosakata.html
+++ b/menukosakata.html
@@ -199,7 +199,7 @@ const quizLinks={
     "Nama Hari":"pemulahari.html",
     "Waktu":"pemulawaktu.html",
     "Nama Bulan":"pemulabulan.html",
-    "Sekolah":"pemulasekolah.html",
+    "Sekolah":"psekolah.html",
     "Warna":"pemulawarna.html",
     "Angka":"pemulaangka.html",
     "Anggota Tubuh":"pemulatubuh.html",
