--- a/menukosakata.html
+++ b/menukosakata.html
@@ -242,7 +242,13 @@ random:{
     "Kosakata 1":"kosakata.html",
     "Kosakata 2":"kotoba.html",
     "Kosakata 3":"n5kosakata.html",
-    "Kosakata 4":"xpresstka.html"
+    "Kosakata 4":"xpresstka.html",
+      "Kosakata 5":"kosakata.html",
+    "Kosakata 6":"kotoba.html",
+    "Kosakata 7":"n5kosakata.html",
+    "Kosakata 8":"xpresstka.html",
+      "Kosakata 9":"kosakata.html",
+    "Kosakata 10":"kotoba.html",
 }
 };
 
